--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   },
   "devDependencies": {
     "backbone": "^1.1.2",
+    "chai": "^2.3.0",
+    "chai-things": "^0.2.0",
     "gulp": "^3.8.11",
-    "gulp-mocha": "^2.0.1",
-    "should": "^6.0.1"
+    "gulp-mocha": "^2.0.1"
   }
 }
